[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://demos/hand/hand_animation_demo.gd" id="1_0"]
[ext_resource type="Script" path="res://scripts/classes/hand_display.gd" id="2_0"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 28
font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 16
font_color = Color(0.8, 0.9, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3"]
font_size = 18
font_color = Color(0.8, 0.9, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.15, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.7, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_left = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.3, 0.4, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.6, 0.8, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.15, 0.25, 0.35, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.7, 0.9, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8

[node name="HandAnimationDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Header" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "PLAN Card Game - HandDisplay Demo"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Play, Learn, and Act Now! â€¢ Godot 4.4 Implementation"
modulate = Color(0.7, 0.9, 1, 1)
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0.3)

[node name="MethodPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 120)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MethodPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="MethodTitle" type="Label" parent="VBoxContainer/MethodPanel/VBoxContainer"]
layout_mode = 2
text = "ðŸ”§ HandDisplay Method Calls"
label_settings = SubResource("LabelSettings_2")

[node name="MethodLog" type="RichTextLabel" parent="VBoxContainer/MethodPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
text = "[color=cyan]Demo ready - Click buttons to test HandDisplay methods[/color]"
scroll_following = true

[node name="ControlsPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="ControlsGrid" type="GridContainer" parent="VBoxContainer/ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
columns = 4

[node name="AddProblemBtn" type="Button" parent="VBoxContainer/ControlsPanel/ControlsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Problem Card"

[node name="AddSolutionBtn" type="Button" parent="VBoxContainer/ControlsPanel/ControlsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Solution Card"

[node name="AddUltimateBtn" type="Button" parent="VBoxContainer/ControlsPanel/ControlsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Ultimate Card"

[node name="ClearHandBtn" type="Button" parent="VBoxContainer/ControlsPanel/ControlsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear Hand"

[node name="AddNullBtn" type="Button" parent="VBoxContainer/ControlsPanel/ControlsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Null (Test)"
modulate = Color(1, 0.7, 0.7, 1)

[node name="AddDuplicateBtn" type="Button" parent="VBoxContainer/ControlsPanel/ControlsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Duplicate (Test)"
modulate = Color(1, 0.7, 0.7, 1)

[node name="RemoveCardBtn" type="Button" parent="VBoxContainer/ControlsPanel/ControlsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Card"
modulate = Color(1, 0.8, 0.6, 1)

[node name="RemoveInvalidBtn" type="Button" parent="VBoxContainer/ControlsPanel/ControlsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Invalid (Test)"
modulate = Color(1, 0.7, 0.7, 1)

[node name="HandDisplay" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)
script = ExtResource("2_0")

[node name="Background" type="Panel" parent="VBoxContainer/HandDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3")

[node name="EmptyLabel" type="Label" parent="VBoxContainer/HandDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -10.0
offset_right = 150.0
offset_bottom = 10.0
text = "Hand is empty - Add cards to see fan layout"
horizontal_alignment = 1
modulate = Color(1, 1, 1, 0.6)

[node name="StatsPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 120)
theme_override_styles/panel = SubResource("StyleBoxFlat_3")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StatsTitle" type="Label" parent="VBoxContainer/StatsPanel/VBoxContainer"]
layout_mode = 2
text = "ðŸ“Š HandDisplay Statistics - get_card_count()"
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 1

[node name="StatsGrid" type="GridContainer" parent="VBoxContainer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -10.0
columns = 4

[node name="TotalStat" type="VBoxContainer" parent="VBoxContainer/StatsPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="VBoxContainer/StatsPanel/StatsGrid/TotalStat"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/StatsPanel/StatsGrid/TotalStat"]
layout_mode = 2
text = "Total Cards"
modulate = Color(0.8, 0.9, 1, 1)
horizontal_alignment = 1

[node name="ProblemStat" type="VBoxContainer" parent="VBoxContainer/StatsPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="VBoxContainer/StatsPanel/StatsGrid/ProblemStat"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/StatsPanel/StatsGrid/ProblemStat"]
layout_mode = 2
text = "Problem Cards"
modulate = Color(1, 0.8, 0.8, 1)
horizontal_alignment = 1

[node name="SolutionStat" type="VBoxContainer" parent="VBoxContainer/StatsPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="VBoxContainer/StatsPanel/StatsGrid/SolutionStat"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/StatsPanel/StatsGrid/SolutionStat"]
layout_mode = 2
text = "Solution Cards"
modulate = Color(0.8, 1, 0.8, 1)
horizontal_alignment = 1

[node name="UltimateStat" type="VBoxContainer" parent="VBoxContainer/StatsPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="VBoxContainer/StatsPanel/StatsGrid/UltimateStat"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/StatsPanel/StatsGrid/UltimateStat"]
label_name = ""
text = "Ultimate Cards"
modulate = Color(0.8, 0.8, 1, 1)
horizontal_alignment = 1

[node name="InfoPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 80)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="InfoLabel" type="RichTextLabel" parent="VBoxContainer/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
text = "[center][color=cyan][b]ðŸŽ® Godot Implementation Details[/b][/color]
[color=white]Class: HandDisplay extends Control â€¢ Data: cards: Array[Card] = []
Methods: add_card(Card) â†’ bool, remove_card(int) â†’ bool, get_card_count() â†’ int
Tests: 56/56 passing â€¢ Architecture: MVC pattern VIEW component[/color][/center]"
fit_content = true
